--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,9 +32,9 @@ rand = "0.8"
 # GUI (optional)
 eframe = { version = "0.29", optional = true, default-features = false, features = ["default_fonts", "glow", "persistence"] }
 image = { version = "0.25", optional = true, default-features = false, features = ["png", "ico"] }
-rfd = { version = "0.14", optional = true }
+rfd = { version = "0.15", optional = true }
 
-[build-dependencies]
+[target.'cfg(windows)'.build-dependencies]
 winresource = "0.1"
 
 [features]
